# dokebicollector

./: .gitignore  COLLECTION_PLAN.md  Cargo.toml  README.md  build-all.bat  build.rs
.github/workflows/: build-windows-linux.yml
scripts/: build-all.ps1
src/: main.rs
test-output/browser-test/20260426T133529Z/: collection_manifest.json  collection_manifest.sha256
test-output/browser-test/20260426T133529Z/commands/: autorun_hklm_run.txt  dns_cache.txt  drivers.txt  local_groups.txt  named_pipes.txt  network_connections.txt  processes.txt  scheduled_tasks.txt  services.txt  system_info.txt  time_info.txt  users_sessions.txt
test-output/browser-test/20260426T133529Z/evtx/: RDP_CoreTS.evtx  RDP_RemoteConnectionManager.evtx  TaskScheduler_Operational.evtx  WMI_Operational.evtx
test-output/build-run-check/20260427T141510Z/: collection_manifest.json  collection_manifest.sha256
test-output/build-run-check/20260427T141510Z/commands/: arp.txt  autorun_hklm_runonce.txt  defender_status.txt  dns_cache.txt  drivers.txt  env_vars.txt  firewall_rules.txt  installed_software.txt  local_users.txt  logon_sessions.txt  named_pipes.txt  network_connections.txt  processes.txt  routes.txt  scheduled_tasks.txt  services.txt  startup_folders.txt  system_info.txt  time_info.txt  users_sessions.txt
test-output/case2/20260426T132757Z/: collection_manifest.json  collection_manifest.sha256
test-output/final-check/20260426T132958Z/: collection_manifest.json  collection_manifest.sha256
test-output/test-case/20260426T132506Z/: collection_manifest.json  collection_manifest.sha256
(+55 files in other folders)
