[package]
name = "dokebicollector"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4.5", features = ["derive"] }
encoding_rs = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
walkdir = "2.5"
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
